<resources>
    <string name="app_name">ArtflowV1</string>
    <string name="txt_bienvenido">BIENVENIDO</string>
    <string name="rectangulo">rectangulo</string>
    <string name="artflow">artflow</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="ingresa">Ingresar</string>
    <string name="iraregistro">Registrate</string>
    <string name="olvidastepass">¿Has olvidado tu contraseña?</string>
    <string name="txtingresa">Ingresa para ver las inspiraciones
 de tus amigos.</string>


    //registro
    <string name="logo1">logo1</string>
    <string name="email1">Email</string>
    <string name="nombrecompleto">Nombre completo</string>
    <string name="usurname">Nombre de usuario</string>
    <string name="pass1">Password</string>
    <string name="btnregistrate">Registrate</string>
    <string name="textview">Al registrarte, aceptas nuestras Condiciones, nuestra Politica de privacidad y nuestra Politica de cookies.</string>
    <string name="btnfacebook">Continuar con Facebook</string>
    <string name="btngoogle">Continuar con Google</string>


    //mainactivity
    <string name="btncerrarsesion">Cerrar sesion</string>
    <string name="default_web_client_id" translatable="false">746582784498-ughlde5h4j0qadk2bo43l2ncdk8pjlga.apps.googleusercontent.com</string>

    //identificadores Facebook

    <string name="facebook_app_id">393164303077828</string>
    <string name="fb_login_protocol_scheme">fb393164303077828</string>
    <string name="facebook_client_token">56789</string>

    //forgotpass
    <string name="recup">Ingresá tu correo para recuperar tu contraseña</string>
    <string name="recuperarcontraseña">Recuperar</string>
    <string name="ir_iniciar_sesion">Iniciar sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //HomeFragment
    <string name="starflowwhite">logowhite</string>
    <string name="scroll">scroll</string>
    <string name="iv">iv</string>

    <string name="btnCine">Cine</string>
    <string name="btnAnimacion">Animación</string>
    <string name="btnDG">Diseño Grafico</string>
    <string name="btnUXUI">UX/UI</string>
    <string name="btnEdicion">Edición</string>
    <string name="btnPublicidad">Publicidad</string>
    <string name="btnVideojuegos">Videojuegos</string>

    <string name="search">Inspiración</string>
    <string name="buscador">Campo de búsqueda. Ingrese aquí para buscar contenido en la aplicación. Puede escribir y editar el texto.</string>

    //MCreadorFRagment
    <string name="galeria">Abrir galeria</string>
    <string name="linea">linea</string>
    <string name="Crear">Crear</string>
    <string name="publicar">Publicar</string>
    <string name="grid">grid</string>

    //Perfil fragment
    <string name="perfilfoto">Foto de perfil</string>
    <string name="NombreUsuario">Bianca Flores</string>
    <string name="Biografia">Diseñadora multimedia apasionada. Transformo ideas en experiencias visuales impactantes.</string>
    <string name="seguidores">50.310 Seguidores</string>
    <string name="menusharp">Menu</string>

    <string name="btnMensaje">Enviar mensaje</string>
    <string name="btnSeguir">Seguir</string>
    <string name="btnLampara">Posteos</string>
    <string name="btnMegusta">Me gusta</string>

    //Guardados Fragment
    <string name="txtGuardadosFragment">Elementos guardados</string>
    <string name="imgButtonGFDiseno">Descripcion del boton diseño</string>
    <string name="tvGFDiseno">Diseño</string>
    <string name="imgButtonGFProgramacion">Descripcion del boton programacion</string>
    <string name="tvGFProgramacion">Programación</string>
    <string name="imgButtonGFAnimacion">Descripcion del boton animacion</string>
    <string name="tvGFAnimacion">Animación</string>
    <string name="imgButtonGFAudiovisual">Descripcion del boton audiovisual</string>
    <string name="tvGFAudiovisual">Audiovisual</string>
    <string name="imgButtonGFMarketing">Descripcion del boton marketing</string>
    <string name="tvGFMarketing">Marketing</string>
    <string name="imgButtonGFEdicion">Descripcion del boton edición</string>
    <string name="tvGFEdicion">Edición</string>

</resources>